test/expected/cli/bash_mood_arith_error.out
== bash mood reports an arithmetic error and goes on to the next line, matching bash:
before
shit: 2:6: error: Arithmetic: division by zero.
     2 |  echo $((1/0))
       |       ^~~~~~~~ here.
after
rc=0
== the strict default mood aborts the run on an arithmetic error:
shit: 1:6: error: Arithmetic: division by zero.
     1 |  echo $((1/0)); echo after
       |       ^~~~~~~~ here.
rc=1
== bash mood still continues past an ordinary command failure:
after
rc=0
== bash mood still continues past a readonly reassignment, matching bash:
shit: 1:15: error: Unable to assign 'r' because it is read only.
     1 |  readonly r=1; r=2; echo after
       |                ^~~ here.
after
rc=0
